somewhat fixed the broken inline lists (damn you, safari)

--- a/css/looksies.less
+++ b/css/looksies.less
@@ -251,11 +251,11 @@
 					a {
 						text-decoration: none;
 						color: @sub;
-						.itemized;
+						margin: 0;
 						.hide-link;
-						&:first-child:after {
-							content: " ";
-						}
+					}
+					li {
+						.itemized;
 					}
 
 				}
